# boreas

./: Cargo.toml  README.md  TODO.md
.github/workflows/: rust.yml
data/config/: simple_config.json  simple_config.schema.json
examples/: datetime_generation.rs  geotif_reader.rs  lut_computation.rs  qaa_example.rs  sun_positions.rs
reference/nasa-ocssw/: Makefile  README.md  nasa_qaa_compare.c
src/: bbox.rs  date_gen.rs  lib.rs  main.rs  oceanographic_model.rs  sat_bands.rs  utils.rs
src/config/: error.rs  mod.rs  time_step.rs
src/iop/: constants.rs  mod.rs  qaa.rs
src/lut/: lookup_table.rs  mod.rs  sunpos.rs
src/oceanographic_model/: batch_process.rs  batch_runner.rs  mod.rs  pixel.rs  processor.rs
src/readers/: geotiff.rs  mod.rs  nc.rs  types.rs  utils.rs  zarr.rs
src/solar/: mod.rs
